2001-09-25  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc,flags.h,etc:  Flag 4 = 'dead'.  Removed separate
	'dead' flag.

2001-09-25  Dancer Vesperman  <dancer@users.sourceforge.net>

	* sigame.cc: Use a std::string instead of a fixed-length buffer
	* ibid: Fixed spelling error.
	* bggame.cc: Use a std::string instead of a fixed-length buffer
	* files/utils.h: Add an inline wrapper so that U7exists() can take a std::string

2001-09-23  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Fix Fawn Tower in old savegames.
	* intrinsics.cc:  Treat flag #4 as 'dead'.

2001-09-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* bggame.cc: fixed nearly-infinite loop in butterfly scene

2001-09-22 Patrick Burke <takhisisii@yahoo.com.au>
	* Makefile.cygwin: Added from Kirben "Just added distribution option"

2001-09-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.*: fixed include paths in alternate makefiles
	* Makefile.*: build ucdisasm.cc

2001-09-22  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Fixed (again) Moonshade Trial.
	* schedule.cc (public): Better checks for occupied chairs.
	* objs/objs.cc:  A find_closest(vec,...) added.

2001-09-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/uctools.h, tools/wud.c: some small changes to wud's output
	* usecode/ucdisasm.cc, usecode/ucinternal.*: usecode trace disassembler
	* usecode/useval.*: added a short output format for long arrays
	* exult.cc: set "config/debug/trace/usecode" to "verbose" to enable
	the new (painfully verbose) usecode instruction trace mode.
	(only works when DEBUG is defined)

2001-09-21  Ryan Nunn <triforce@merlin.net.au>
	* msvcstuff/.cvsignore : Fixed some problems added more files
	* msvcstuff/Exult.dsw : Forgot to re-add this ages ago.
	* msvcstuff/exconfig/* : Files for exconfig helper dll used with the
	  new windows installer.

2001-09-21  Ryan Nunn <triforce@merlin.net.au>