@@ -51,6 +51,18 @@ using std::string;
 static void switch_slashes(string & name);
 static bool base_to_uppercase(string& str, int count);
 
+
+// Wrap a few functions
+inline int stat(const std::string &file_name, struct stat *buf)
+{
+	if(!buf)
+		{
+		errno=EFAULT;
+		return -1;
+		}
+	return stat(file_name.c_str(),buf);
+}
+
 // Ugly hack for supporting different paths
 
 static std::map<string, string> path_map;
@@ -387,7 +399,7 @@ int U7exists
 	
 	int uppercasecount = 0;
 	do {
-		exists = (stat(name.c_str(), &sbuf) == 0);
+		exists = (stat(name, &sbuf) == 0);
 		if (exists)
 			return true; // found it!
 	} while (base_to_uppercase(name, ++uppercasecount));
